# free-apis-collection

./: AGENTS.md  README.md  apis.json
mcp-server/: pyproject.toml  server.py
