[project]
name = "free-apis-mcp"
version = "1.0.0"
description = "MCP server providing AI agents access to 50+ free APIs"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
